fixed bug with graph not showing when clicked

--- a/style.css
+++ b/style.css
@@ -83,3 +83,6 @@ a {
 .dropdown-toggle {
     border: 1px red solid
 }
+.fa {
+    color: #CCCC00;
+}
